[package]
edition = "2021"
name = "alog"
version = "0.6.5"
authors = ["thyrc <thyrc@users.noreply.github.com>"]
description = "Anonymize 'Combined Log Format' data"
license = "MIT"
homepage = "https://crates.io/crates/alog"
repository = "https://github.com/thyrc/alog"
documentation="https://docs.rs/alog/"
readme = "README.md"
keywords = ["log", "anonymize", "parse"]
categories = ["parsing", "command-line-utilities"]
exclude = [
    "snippets",
    ".github"
]

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
debug = true
codegen-units = 1

[dependencies]
clap = { version = "3", default-features = false, features = ["std"], optional = true }
lazy_static = "1.4"
regex = { version = "1.5", default-features = false, features = ["std", "perf"] }

[lib]
name = "alog"
path = "src/lib.rs"

[features]
alog-cli = [ "clap" ]

[[bin]]
name = "alog"
required-features = [ "alog-cli" ]
