[package]
edition = "2021"
name = "alog"
version = "0.9.2"
authors = ["thyrc <thyrc@users.noreply.github.com>"]
description = "Anonymize 'Combined Log Format' data"
license = "MIT"
homepage = "https://crates.io/crates/alog"
repository = "https://github.com/thyrc/alog"
documentation="https://docs.rs/alog/"
readme = "README.md"
keywords = ["log", "anonymize", "parse"]
categories = ["parsing", "command-line-utilities"]
exclude = [
    "snippets",
    ".github"
]

[profile.release]
opt-level = 2
panic = "abort"
lto = true
debug = true
codegen-units = 1

[dependencies]
lazy_static = "1.4"
lexopt = { version = "0.3.0", optional = true }
libc = "0.2.161"
regex = { version = "= 1.7.3", default-features = false, features = ["std", "perf-dfa"] }

[lib]
name = "alog"
path = "src/lib.rs"

[features]
alog-cli = [ "lexopt" ]

[[bin]]
name = "alog"
required-features = [ "alog-cli" ]
